--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bubbly-bg": "^1.0.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
     "normalize.css": "^8.0.1",
